# opsflow-env

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
opsflow_env/: __init__.py  env.py  graders.py  models.py  rewards.py  rules.py  tasks.py
opsflow_env/fixtures/: easy_single_request_clear_slot.json  hard_escalate_protected_conflict.json  hard_priority_conflict_timezone.json  hard_reschedule_internal_sync.json  medium_missing_info_with_conflict.json
scripts/: mock_openai_server.py  run_submission_smoke_checks.py
server/: __init__.py  app.py
tests/: __init__.py  test_api.py  test_env.py
