[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opsflow-env"
version = "0.1.0"
description = "OpenEnv benchmark for operations inbox triage and scheduling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "openenv-core>=0.2.0",
  "openai>=1.40.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.2",
  "uvicorn>=0.30.0",
]

[project.scripts]
opsflow-server = "app:main"
server = "app:main"

[tool.setuptools.packages.find]
include = ["opsflow_env*"]
